# GTK_T2

./: .gitignore  CMakeLists.txt  list_view (copy).glade  list_view.glade~  list_view_main.c  list_view_main.glade~
b/: build.ninja  listview
db/: CMakeLists.txt
db/random_db/src/: index2.js
